Update Find us List

--- a/form.html
+++ b/form.html
@@ -66,6 +66,7 @@
 								<option value="friends" selected>Friends</option>
 								<option value="search">Search Engine</option>
 								<option value="ad">Advertisement</option>
+								<option value="sm">Social Media</option>
 								<option value="other">Other</option>
 							</select>
 						</div>
