Change Title and One part of form

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="resources/css/form_style.css">
 		<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet">
-		<title> cssd cloud tracking system</title>
+		<title>Tow Direction Form</title>
 		
 		<link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32x32.png">
@@ -59,7 +59,7 @@
 					
 					<div class="row">
 						<div class="col span-1-of-3">
-							<label for="find-us">How did you find us?</label>	
+							<label for="find-us">How did you find us ?</label>	
 						</div>
 						<div class="col span-2-of-3">
 							<select name="find-us" id="find-us">
