--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="resources/css/form_style.css">
 		<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400,700" rel="stylesheet">
-		<title>Tow Direction Form</title>
+		<title>Tow Direction Form for Arabic And English</title>
 		
 		<link rel="apple-touch-icon" sizes="180x180" href="resources/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="resources/favicons/favicon-32x32.png">
