--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
 	<body>
 <section class="section-form">
 			<div class="row">
-				<h2>We're happy to hear from you</h2>
+				<h2>We're happy to hear from you , Please tell something</h2>
 			</div>
 	
 			<div class="row lang">
