--- a/form.html
+++ b/form.html
@@ -50,6 +50,15 @@
 					
 					<div class="row">
 						<div class="col span-1-of-3">
+							<label for="name">Last Name</label>			
+						</div>
+						<div class="col span-2-of-3">
+							<input type="text" name="name" id="name" placeholder="Your Name" required>
+						</div>
+					</div>
+					
+					<div class="row">
+						<div class="col span-1-of-3">
 							<label for="email">Email</label>			
 						</div>
 						<div class="col span-2-of-3">
